--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"atomic-router": "^0.9.0",
+		"atomic-router-react": "^0.9.0",
+		"effector": "^23.0.0",
+		"effector-react": "^23.0.1",
+		"history": "^5.3.0",
 		"i18next": "^23.4.5",
 		"i18next-browser-languagedetector": "^7.1.0",
 		"i18next-http-backend": "^2.2.1",
