--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
 	"compilerOptions": {
-		"plugins": [{ "name": "typescript-plugin-css-modules" }],
+		"plugins": [],
 		"module": "commonjs",
 		"target": "es2016",
 		"moduleResolution": "node",
-		"baseUrl": "./react-project-template",
 		"isolatedModules": true,
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
