--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@mantine/core": "^7.2.2",
+		"@mantine/hooks": "^7.2.2",
 		"atomic-router": "^0.9.0",
 		"atomic-router-react": "^0.9.0",
 		"effector": "^23.0.0",
@@ -47,6 +49,9 @@
 		"husky": "^8.0.3",
 		"jsdom": "^22.1.0",
 		"lint-staged": "^14.0.1",
+		"postcss": "^8.4.32",
+		"postcss-preset-mantine": "^1.11.0",
+		"postcss-simple-vars": "^7.0.1",
 		"prettier": "2.8.8",
 		"stylelint": "^15.9.0",
 		"stylelint-config-standard": "^33.0.0",
